# mpqueue

./: .gitignore  LICENCE  README.md  pyproject.toml  start.sh
.github/workflows/: python-app.yml
mdqueue-cli/: main.py
mdqueue-cli/modules/: mpd_client.py  queue_manager.py
