[tool.poetry]
name = "mdqueue-cli"
version = "0.1.0"
description = ""
authors = ["craftybloxy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
rich = "^13.7.1"
python-mpd2 = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
